--- a/build.xml
+++ b/build.xml
@@ -91,7 +91,7 @@
 	
 	<target name="importViaDataPump">
 		<echo>Using impdp to load the storetw schema</echo>
-		<exec executable="$ORACLE_HOME/bin/impdp" failonerror="true">
+		<exec executable="${ORACLE_HOME}/bin/impdp" failonerror="true">
 			<arg value="userid=storetw/***REMOVED***@dbstage.er.usgs.gov"/>
 			<arg value="directory=pdc_temp"/>
 			<arg value="dumpfile=stormodb_shire_storetw_%u.cdmp"/>
