--- a/build.xml
+++ b/build.xml
@@ -88,6 +88,7 @@
 			username="storet_user"
 			password="${storet_password}"
 			command="bash -e storet_dump.sh"
+			outproperty="ssh.output"
 		/>
 	</target>
 	
