attempt to catch no export differences

--- a/build.xml
+++ b/build.xml
@@ -90,6 +90,7 @@
 			command="bash -e storet_dump.sh"
 			outputproperty="${basedir}/ssh.output"
 		/>
+		<echoproperties/>
 	</target>
 	
 	<target name="dropStoretWTables">
