--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
 	<target name="ci" depends="buildPackage, compilePackageEmptyCiDB, runPackage"/>
 
 	<target name="buildPackage">
-		<echo>Rebuiling the etl database pacakge and body</echo>
+		<echo>Rebuiling the etl database package and body</echo>
 		<exec executable="sqlplus" failonerror="true">
 			<arg value="${wqp_storet_username}/${wqp_storet_password}@${instance}"/>
 			<arg value="@${basedir}/create_storet_objects.sql"/>
@@ -14,7 +14,7 @@
 	</target>
 	
 	<target name="compilePackageEmptyCiDB">
-		<echo>Rebuiling the etl database pacakge and body</echo>
+		<echo>Rebuiling the etl database package and body</echo>
 		<exec executable="sqlplus" failonerror="true">
 			<arg value="${wqp_storet_username}/${wqp_storet_password}@${instance}"/>
 			<arg value="@${basedir}/emptyCiDB.sql"/>
