change "dev" target to disable emails

--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <project name="QwStoretEtl" default="default">
 	<target name="default" depends="buildPackage, scpScript, dos2unix, qwStoretEtl"/>
 
-	<target name="dev" depends="buildPackageDw, runPackage"/>
+	<target name="dev" depends="buildPackageDw, compilePackageEmptyCiDB, runPackage"/>
 
     <target name="wiwqp" depends="buildPackageWiwqp, runPackage"/>
 
