--- a/build.xml
+++ b/build.xml
@@ -74,8 +74,7 @@
         <echo>Running the main ETL Package in ${stagingInstance}</echo>
         <exec executable="sqlplus" failonerror="true">
             <arg value="${wqp_storet_username}/${wqp_storet_password}@${stagingInstance}"/>
-            <arg value="@${basedir}/runPackage.sql"/>
-            <arg value="dummy"/>
+            <arg value="begin create_storet_objects.main end;"/>
         </exec>
     </target>
 
